# mountain_data_binner

./: .gitignore  README.md  pyproject.toml  tox.ini
.github/workflows/: python-package.yml
data/: DEM_ALPES_NORD_L93_250m_bilinear.tif  EOFR63JPSS_multisat_20251122.nc
notebooks/: example_usage.ipynb  example_usage.md
scripts/: process_mnt.sh
src/mountain_data_binner/: mountain_binner.py  preprocessing.py  semidistributed.py
src/mountain_mapper/: semidistributed.py
src/mountain_variability_drivers/: semidistributed.py
tests/: test_mountain_binner.py  test_preprocessing.py  test_semidistributed.py
